Fixed button rendering on safari

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -67,77 +67,20 @@
 }
 
 #explore-button {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    outline: none;
-    border: 0;
-    vertical-align: middle;
-    text-decoration: none;
-    font-family: inherit;
-    font-size: 18px;
-    @media (max-width: 900px) {
-      font-size: 15px;
-    }
-    @media (max-width: 700px) {
-      font-size: 10px;
-    }
-   }
-   
-   #explore-button.explore {
-    font-weight: 600;
-    text-transform: uppercase;
-    background: #24A74A;
-    /* border: 2px solid #06520c; */
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transition: background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
-    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
-   }
-   
-   #explore-button.explore::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgb(31, 136, 59);
-    border-radius: inherit;
-    -webkit-box-shadow: 0 0 0 2px #8eb185, 0 0.625em 0 0 #e5ffe2;
-    box-shadow: 0 0 0 2px #85b18c, 0 0.625em 0 0 #e3ffe2;
-    -webkit-transform: translate3d(0, 0.75em, -1em);
-    transform: translate3d(0, 0.75em, -1em);
-    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-   }
-   
-   #explore-button.explore:hover {
-    background: rgb(66, 209, 104);
-    -webkit-transform: translate(0, 0.25em);
-    transform: translate(0, 0.25em);
-   }
-   
-   #explore-button.explore:hover::before {
-    -webkit-box-shadow: 0 0 0 2px #8cb185, 0 0.5em 0 0 #e2ffe3;
-    box-shadow: 0 0 0 2px rgb(99, 170, 99), 0 0.5em 0 0 #e2ffe2;
-    -webkit-transform: translate3d(0, 0.5em, -1em);
-    transform: translate3d(0, 0.5em, -1em);
-   }
-   
-   #explore-button.explore:active {
-    background: #9df098;
-    -webkit-transform: translate(0em, 0.75em);
-    transform: translate(0em, 0.75em);
-   }
-   
-   #explore-button.explore:active::before {
-    -webkit-box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
-    box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
-    -webkit-transform: translate3d(0, 0, -1em);
-    transform: translate3d(0, 0, -1em);
-   }
+  border: 0;
+  background-color: rgb(90, 201, 46);
+  transition: all .3s ease;
+  box-shadow: rgb(31, 136, 59) 0px 10px 0px 0px;
+  color: hsl(0, 0%, 100%);
+ }
+ 
+ #explore-button:active {
+  background-color: rgb(90, 201, 46);
+  /*50, 168, 80*/
+  box-shadow: rgb(31, 136, 59) 0px 0px 0px 0px;
+  transform: translateY(5px);
+  transition: 200ms;
+ }
 
    @keyframes slideInLeft {
     0% {
